build-soketi.yml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko
  namespace: youtubegaminglive
spec:
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args:
    - --context=git://github.com/andreitelteu/youtubegaminglive-soketi.git
    - --destination=ghcr.io/andreitelteu/youtubegaminglive-soketi:1.0.0
    volumeMounts:
      - name: kaniko-secret
        mountPath: /kaniko/.docker
    resources:
      limits:
        cpu: 300m
        memory: 800Mi
      requests:
        cpu: 100m
        memory: 100Mi
  restartPolicy: Never
  volumes:
    - name: kaniko-secret
      secret:
        secretName: regcred
        items:
          - key: .dockerconfigjson
            path: config.json
