argo-events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-eventsource
  namespace: argo-events
spec:
  ports:
  - port: 12000
    protocol: TCP
    targetPort: 12000
  selector:
    eventsource-name: youtubegaminglive-webhooks
  # type: ClusterIP
  type: NodePort
