argo-workflows.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-ingress
  namespace: argo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: argo-basic-auth
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - awgow.youtubegaming.live
    secretName: awgo-workflows-tls
  rules:
    - host: awgow.youtubegaming.live
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
